--- a/about.html
+++ b/about.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | LIVEHA</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
+
 <body>
   <nav class="navbar">
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="news.html">News</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+    <div class="navbar-header">
+      <!-- <span class="navbar-brand"><a href="index.html">LIVEHA</a></span> -->
+      <button class="menu-toggle" id="menuToggle">&#9776;</button> <!-- ☰ -->
+    </div>
+    <ul class="nav-links" id="navLinks">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+
   <section class="about">
     <h1>About LIVEHA</h1>
-    <p>LIVEHA is a Kenyan musician known for bold sounds, soulful lyrics, and an electric presence. 
-    This space shares the story behind the music, inspirations, and artistic journey.</p>
+    <p>LIVEHA is a Kenyan musician known for bold sounds, soulful lyrics, and an electric presence.
+      This space shares the story behind the music, inspirations, and artistic journey.</p>
   </section>
+
+  <script src="assets/js/main.js"></script>
+
 </body>
+
 </html>
