--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | LIVEHA</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
+
 <body>
   <nav class="navbar">
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="news.html">News</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+    <div class="navbar-header">
+      <!-- <span class="navbar-brand">MySite</span> -->
+      <button class="menu-toggle" id="menuToggle">&#9776;</button> <!-- ☰ -->
+    </div>
+    <ul class="nav-links" id="navLinks">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
   <section class="contact-page">
     <h1>Contact LIVEHA</h1>
     <p>Email: <a href="mailto:liveha@example.com">liveha@example.com</a></p>
@@ -22,5 +29,9 @@
     <p>Instagram: @liveha_music</p>
     <p><a href="assets/docs/liveha_epk.pdf" download>Download EPK</a></p>
   </section>
+
+  <script src="assets/js/main.js"></script>
+
 </body>
+
 </html>
