--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
   <!-- Navigation -->
   <nav class="navbar">
-    <ul>
+    <div class="navbar-header">
+      <!-- <span class="navbar-brand"><a href="index.html">LIVEHA</a></span> -->
+      <button class="menu-toggle" id="menuToggle">&#9776;</button> <!-- ☰ -->
+    </div>
+    <ul class="nav-links" id="navLinks">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="news.html">News</a></li>
@@ -32,7 +36,7 @@
         <mark>Independent artist</mark>
       </p>
       <div class="hero-images">
-        <img src="assets/images/liveha .jpg" alt="LIVEHA Artist Photo" class="hero-img" />
+        <img src="assets/images/liveha.jpg" alt="LIVEHA Artist Photo" class="hero-img" />
         <!-- <img src="assets/images/liveha2.jpg" alt="LIVEHA Artist Photo" class="hero-img" /> -->
       </div>
       <div class="social-links">
@@ -50,39 +54,10 @@
     </div>
   </section>
 
-
   <!-- Music Section -->
-  <!-- <section class="music">
-    <h2>Music</h2>
-    <audio controls>
-      <source src="assets/music/sample.mp3" type="audio/mp3" />
-      Your browser does not support the audio element.
-    </audio>
-    <video controls width="300">
-      <source src="assets/music/video1.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-  </section> -->
-
   <section class="music">
     <h2>Music</h2>
     <div class="music-grid">
-
-      <!-- YouTube Embed -->
-      <div class="music-card">
-        <iframe src="https://www.youtube.com/embed/hwLEmsgIU6Q" title="LIVEHA - CTRL (Official Visualizer)"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-        </iframe>
-      </div>
-
-      <div class="music-card">
-        <iframe width="718" height="404" src="https://www.youtube.com/embed/rGK9E5xksLc" title="MY LOVE Official Audio"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      </div>
 
       <!-- Spotify Artist Embed - shows all songs, albums, and playlists -->
       <div class="music-card">
@@ -94,11 +69,17 @@
       </div>
 
       <div class="music-card">
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/04WURXRGUwXlZLnTL8ggbh?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px"
+          src="https://open.spotify.com/embed/album/04WURXRGUwXlZLnTL8ggbh?utm_source=generator" width="100%"
+          height="352" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
 
       <div class="music-card">
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4WZP2oBIY2lrBiSs8zK5iy?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px"
+          src="https://open.spotify.com/embed/album/4WZP2oBIY2lrBiSs8zK5iy?utm_source=generator" width="100%"
+          height="352" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
 
       <!-- Spotify Embed -->
@@ -109,12 +90,80 @@
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
 
-      
 
 
+      <!-- YouTube Embed -->
+      <div class="music-card">
+        <iframe src="https://www.youtube.com/embed/hwLEmsgIU6Q" title="LIVEHA - CTRL (Official Visualizer)"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy">
+        </iframe>
+      </div>
 
+      <div class="music-card">
+        <iframe width="718" height="404" src="https://www.youtube.com/embed/rGK9E5xksLc" title="MY LOVE Official Audio"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+      </div>
 
+      <div class="music-card">
+        <iframe width="718" height="404"
+          src="https://www.youtube.com/embed/Q0YRUelVECE?list=OLAK5uy_nqNjjCivNFvt5Rq8bNdxKJgIpoilDRqzo" title="KITTY"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+      </div>
+
+      <div class="music-card">
+        <iframe width="718" height="404"
+          src="https://www.youtube.com/embed/RYhZ1Uqvp2c?list=OLAK5uy_nqNjjCivNFvt5Rq8bNdxKJgIpoilDRqzo" title="SO SICK"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+      </div>
+
+      <div class="music-card">
+        <iframe width="718" height="404"
+          src="https://www.youtube.com/embed/rqALfMtvhZo?list=OLAK5uy_nqNjjCivNFvt5Rq8bNdxKJgIpoilDRqzo"
+          title="INTIENTIONS" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+      </div>
       <!-- Add more music-card divs below as needed -->
+
+      <div class="music-card">
+        <iframe width="718" height="404"
+          src="https://www.youtube.com/embed/jawLNZrSpn4?list=OLAK5uy_nqNjjCivNFvt5Rq8bNdxKJgIpoilDRqzo"
+          title="ON TOP YA BODY" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+      </div>
+
+      <div class="music-card">
+        <iframe width="718" height="404"
+          src="https://www.youtube.com/embed/DhPa2oTQCOI?list=OLAK5uy_nqNjjCivNFvt5Rq8bNdxKJgIpoilDRqzo"
+          title="MISS BEHAVIOUR (interlude)" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+      </div>
+
+      <div class="music-card">
+        <iframe width="718" height="404"
+          src="https://www.youtube.com/embed/hSwO7iMD92A?list=OLAK5uy_nqNjjCivNFvt5Rq8bNdxKJgIpoilDRqzo" title="NIA"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+      </div>
+
+      <div class="music-card">
+        <iframe width="718" height="404"
+          src="https://www.youtube.com/embed/QcYVrtWhwbg?list=OLAK5uy_nqNjjCivNFvt5Rq8bNdxKJgIpoilDRqzo"
+          title="WALK OUT" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+      </div>
 
     </div>
 
@@ -124,25 +173,25 @@
     </div>
   </section>
 
-
-
-
-
-
-  <!-- Gallery Section -->
+  <!-- News Section -->
   <section class="gallery">
-    <h2>Gallery</h2>
+    <h2>News</h2>
     <div class="gallery-grid">
-      <img src="assets/images/gallery1.jpg" alt="LIVEHA gallery image" />
-      <img src="assets/images/gallery2.jpg" alt="LIVEHA gallery image" />
+      <img src="assets/images/News1.jpg" alt="LIVEHA gallery image" />
+      <img src="assets/images/News2.jpg" alt="LIVEHA gallery image" />
+
     </div>
   </section>
 
   <!-- Contact Preview Section -->
   <section class="contact-preview">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:liveha@example.com">liveha@example.com</a></p>
-    <p>Instagram: @liveha_music</p>
+    <div class="contact-content">
+      <p>Email: <a href="mailto:liveha@example.com">liveha@example.com</a></p>
+      <p>Instagram: @_liveha_</p>
+      <p>Mobile: +254 758 747 481</p>
+
+    </div>
   </section>
 
   <script src="assets/js/main.js"></script>
