--- a/about.html
+++ b/about.html
@@ -29,6 +29,25 @@
       This space shares the story behind the music, inspirations, and artistic journey.</p>
   </section>
 
+    <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-container">
+      <p>&copy; 2025 LIVEHA. All rights reserved.</p>
+      <div class="footer-socials">
+        <a href="https://www.instagram.com/_liveha_/" target="_blank" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://open.spotify.com/artist/2bqydyILdFmREFoAxYQ3sO" target="_blank" aria-label="Spotify">
+          <i class="fab fa-spotify"></i>
+        </a>
+        <a href="https://www.youtube.com/channel/UCtaZ6fHaJLPUkty5ag7Fm0w" target="_blank" aria-label="YouTube">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
+
+
   <script src="assets/js/main.js"></script>
 
 </body>
