added about page

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | LIVEHA</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -23,15 +25,78 @@
   </nav>
 
 
-  <section class="about">
-    <h1>About LIVEHA</h1>
-    <p>LIVEHA is a Kenyan musician known for bold sounds, soulful lyrics, and an electric presence.
-      This space shares the story behind the music, inspirations, and artistic journey.</p>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>LIVEHA</h1>
+      <p class="hero-description">
+        <mark>Producer. Sound Engineer. Songwriter. Visionary.</mark><br>
+        <mark>Independent artist pushing sonic boundaries.</mark><br><br>
+        My music is a mirror of the soul vulnerable, fierce, spiritual.<br>
+        I don’t just make tracks, I tell stories.<br> <mark> Each beat, each word, comes from a place of
+          truth.</mark><br>
+        <mark>This is more than art. It’s my calling.</mark>
+      </p>
+      <div class="hero-images">
+        <video class="hero-video" autoplay muted loop playsinline>
+          <source src="assets/videos/about-vid.mp4" type="video/mp4" />
+          <img src="assets/images/liveha2.jpg" alt="LIVEHA" />
+        </video>
+
+      </div>
+    </div>
   </section>
 
-    <!-- Footer -->
+  <section class="journey">
+    <h2>The Journey</h2>
+    <p class="hero-description">
+      From Nairobi’s underground creative scene to digital platforms worldwide, my journey has been one of growth,
+      grit, and transformation. Influenced by soulful Afrobeats, gospel harmonies, and gritty hip hop, my sound is
+      ever-evolving but always true.
+    </p>
+  </section>
+
+  <section class="featured-works">
+    <h2>Featured Tracks</h2>
+    <ul>
+      <li><strong>MY LOVE</strong> – A soulful anthem about desire and divine timing.</li>
+      <li><strong>S.O.Z</strong> – Raw, reflective, and spiritually charged.</li>
+      <li><strong>FOR REAL</strong> – A sonic declaration of self-worth and independence.</li>
+    </ul>
+    <a href="https://open.spotify.com/artist/2bqydyILdFmREFoAxYQ3sO" target="_blank" class="btn">Stream on Spotify</a>
+  </section>
+
+
+  <section class="vision-mission">
+    <h2>My Mission</h2>
+    <p class="hero-description">
+      To heal, elevate, and inspire through sound. To craft music not just for entertainment but for emotional
+      release, spiritual connection, and cultural expression.
+    </p>
+  </section>
+
+  <section class="collab-inquiry">
+    <h2>Want to Work With Me?</h2>
+    <p class="hero-description">For bookings, collaborations, or media inquiries, <br>visit the <mark><a
+          href="contact.html">Contact Page</a>.</mark></p>
+  </section>
+
+
+
+
+
+
+   <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
+      <div class="footer-links">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
       <p>&copy; 2025 LIVEHA. All rights reserved.</p>
       <div class="footer-socials">
         <a href="https://www.instagram.com/_liveha_/" target="_blank" aria-label="Instagram">
