--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | LIVEHA</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -30,9 +32,17 @@
     <p><a href="assets/docs/liveha_epk.pdf" download>Download EPK</a></p>
   </section>
 
-    <!-- Footer -->
+ <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
+      <div class="footer-links">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
       <p>&copy; 2025 LIVEHA. All rights reserved.</p>
       <div class="footer-socials">
         <a href="https://www.instagram.com/_liveha_/" target="_blank" aria-label="Instagram">
