--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <div class="gallery-grid">
       <img src="assets/images/News1.jpg" alt="LIVEHA gallery image" />
       <img src="assets/images/News2.jpg" alt="LIVEHA gallery image" />
-      
+
 
     </div>
   </section>
@@ -195,9 +195,17 @@
     </div>
   </section>
 
-    <!-- Footer -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
+      <div class="footer-links">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
       <p>&copy; 2025 LIVEHA. All rights reserved.</p>
       <div class="footer-socials">
         <a href="https://www.instagram.com/_liveha_/" target="_blank" aria-label="Instagram">
@@ -212,6 +220,7 @@
       </div>
     </div>
   </footer>
+
 
 
   <script src="assets/js/main.js"></script>
