added logo to site

--- a/about.html
+++ b/about.html
@@ -11,10 +11,13 @@
 </head>
 
 <body>
+  <!-- Navigation -->
   <nav class="navbar">
     <div class="navbar-header">
-      <!-- <span class="navbar-brand"><a href="index.html">LIVEHA</a></span> -->
-      <button class="menu-toggle" id="menuToggle">&#9776;</button> <!-- ☰ -->
+      <a href="index.html" class="navbar-brand">
+        <img src="assets/images/liveha2.jpg" alt="LIVEHA Logo" class="navbar-logo" />
+        <span>LIVEHA</span>
+      </a> <button class="menu-toggle" id="menuToggle">&#9776;</button> <!-- ☰ -->
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html">Home</a></li>
@@ -28,7 +31,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
-      <h1>LIVEHA</h1>
+      <!-- <h1>LIVEHA</h1> -->
       <p class="hero-description">
         <mark>Producer. Sound Engineer. Songwriter. Visionary.</mark><br>
         <mark>Independent artist pushing sonic boundaries.</mark><br><br>
