--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <!-- Navigation -->
   <nav class="navbar">
     <div class="navbar-header">
-      <!-- <span class="navbar-brand"><a href="index.html">LIVEHA</a></span> -->
-      <button class="menu-toggle" id="menuToggle">&#9776;</button> <!-- ☰ -->
+      <a href="index.html" class="navbar-brand">
+        <img src="assets/images/liveha2.jpg" alt="LIVEHA Logo" class="navbar-logo" />
+        <span>LIVEHA</span>
+      </a> <button class="menu-toggle" id="menuToggle">&#9776;</button> <!-- ☰ -->
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html">Home</a></li>
