--- a/news.html
+++ b/news.html
@@ -11,10 +11,13 @@
 </head>
 
 <body>
+  <!-- Navigation -->
   <nav class="navbar">
     <div class="navbar-header">
-      <!-- <span class="navbar-brand">MySite</span> -->
-      <button class="menu-toggle" id="menuToggle">&#9776;</button> <!-- ☰ -->
+      <a href="index.html" class="navbar-brand">
+        <img src="assets/images/liveha2.jpg" alt="LIVEHA Logo" class="navbar-logo" />
+        <span>LIVEHA</span>
+      </a> <button class="menu-toggle" id="menuToggle">&#9776;</button> <!-- ☰ -->
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html">Home</a></li>
