added news content

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | LIVEHA</title>
+  <link rel="icon" type="image/jpeg" href="assets/images/favicon.jpeg" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -23,23 +24,25 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="news.html">News</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <!-- <li><a href="contact.html">Contact</a></li> -->
     </ul>
   </nav>
+
+  <section class="journey">
+    <h2>Who is LIVEHA?</h2>
+    <p class="hero-description">
+      LIVEHA is a singer, songwriter, producer, and sound engineer born and bred in Nairobi.
+      His soulful sound brings raw emotion and authenticity you can feel it in every note and hear it in every track.
+      Simply put, LIVEHA is a breath of fresh air in today’s music landscape.
+      <br>He is proudly signed under <mark>SONSOFZION INC.</mark>
+    </p>
+  </section>
 
 
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
       <!-- <h1>LIVEHA</h1> -->
-      <p class="hero-description">
-        <mark>Producer. Sound Engineer. Songwriter. Visionary.</mark><br>
-        <mark>Independent artist pushing sonic boundaries.</mark><br><br>
-        My music is a mirror of the soul vulnerable, fierce, spiritual.<br>
-        I don’t just make tracks, I tell stories.<br> <mark> Each beat, each word, comes from a place of
-          truth.</mark><br>
-        <mark>This is more than art. It’s my calling.</mark>
-      </p>
       <div class="hero-images">
         <video class="hero-video" autoplay muted loop playsinline>
           <source src="assets/videos/about-vid.mp4" type="video/mp4" />
@@ -47,17 +50,20 @@
         </video>
 
       </div>
+      <p class="hero-description">
+        <!-- <mark>Producer. Sound Engineer. Songwriter. Visionary.</mark><br>
+        <mark>Independent artist pushing sonic boundaries.</mark><br><br> -->
+        My music is a mirror of the soul vulnerable, fierce, spiritual.<br>
+        I don’t just make tracks, I tell stories.<br> <mark> Each beat, each word, comes from a place of
+          truth.</mark><br>
+        <mark>This is more than art. It’s my calling.</mark>
+      </p>
+
     </div>
   </section>
 
-  <section class="journey">
-    <h2>The Journey</h2>
-    <p class="hero-description">
-      From Nairobi’s underground creative scene to digital platforms worldwide, my journey has been one of growth,
-      grit, and transformation. Influenced by soulful Afrobeats, gospel harmonies, and gritty hip hop, my sound is
-      ever-evolving but always true.
-    </p>
-  </section>
+
+
 
   <section class="featured-works">
     <h2>Featured Tracks</h2>
@@ -70,26 +76,36 @@
   </section>
 
 
-  <section class="vision-mission">
+  <!-- <section class="vision-mission">
     <h2>My Mission</h2>
     <p class="hero-description">
       To heal, elevate, and inspire through sound. To craft music not just for entertainment but for emotional
       release, spiritual connection, and cultural expression.
     </p>
-  </section>
+  </section> -->
 
   <section class="collab-inquiry">
     <h2>Want to Work With Me?</h2>
-    <p class="hero-description">For bookings, collaborations, or media inquiries, <br>visit the <mark><a
-          href="contact.html">Contact Page</a>.</mark></p>
+    <p class="hero-description">For bookings, collaborations, or media inquiries,  <div class="contact-content">
+      <p style="color: #e62815;">Email:
+        <a href="mailto:ellyasliveha@gmail.com" style="color: #aaa8ad; text-decoration: underline;">ellyasliveha@gmail.com</a>
+      </p>
+      <p>
+        <i class="fab fa-instagram" style="color: #e62815;"></i>
+        <a href="https://www.instagram.com/_liveha_/?hl=en" target="_blank" style="color: #aaa8ad; text-decoration: underline;">
+          My Instagram
+        </a>
+      </p>
+      <p>
+        <i class="fab fa-whatsapp" style="color: #e62815;"></i>
+        <a href="https://api.whatsapp.com/send?phone=%2B254758747481" target="_blank" style="color: #aaa8ad; text-decoration: underline;">
+          Chat on WhatsApp
+        </a>
+      </p>
+    </div></p>
   </section>
 
-
-
-
-
-
-   <!-- Footer -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-links">
@@ -97,7 +113,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="news.html">News</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <!-- <li><a href="contact.html">Contact</a></li> -->
         </ul>
       </div>
       <p>&copy; 2025 LIVEHA. All rights reserved.</p>
