--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LIVEHA | Official Site</title>
+  <link rel="icon" type="image/jpeg" href="assets/images/favicon.jpeg" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 </head>
 
 <body>
@@ -23,7 +23,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="news.html">News</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <!-- <li><a href="contact.html">Contact</a></li> -->
     </ul>
   </nav>
 
@@ -51,6 +51,10 @@
         <a href="https://www.youtube.com/channel/UCtaZ6fHaJLPUkty5ag7Fm0w" target="_blank" aria-label="YouTube">
           <i class="fab fa-youtube"></i>
         </a>
+        <a href="https://api.whatsapp.com/send?phone=%2B254758747481" target="_blank" aria-label="WhatsApp">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        
       </div>
 
     </div>
@@ -188,12 +192,23 @@
 
   <!-- Contact Preview Section -->
   <section class="contact-preview">
-    <h2>Contact</h2>
+    <h2>How to Contact Me </h2>
     <div class="contact-content">
-      <p>Email: <a href="mailto:liveha@example.com">liveha@example.com</a></p>
-      <p>Instagram: @_liveha_</p>
-      <p>Mobile: +254 758 747 481</p>
-
+      <p style="color: #e62815;">Email:
+        <a href="mailto:ellyasliveha@gmail.com" style="color: #aaa8ad; text-decoration: underline;">ellyasliveha@gmail.com</a>
+      </p>
+      <p>
+        <i class="fab fa-instagram" style="color: #e62815;"></i>
+        <a href="https://www.instagram.com/_liveha_/?hl=en" target="_blank" style="color: #aaa8ad; text-decoration: underline;">
+          My Instagram
+        </a>
+      </p>
+      <p>
+        <i class="fab fa-whatsapp" style="color: #e62815;"></i>
+        <a href="https://api.whatsapp.com/send?phone=%2B254758747481" target="_blank" style="color: #aaa8ad; text-decoration: underline;">
+          Chat on WhatsApp
+        </a>
+      </p>
     </div>
   </section>
 
@@ -205,7 +220,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="news.html">News</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <!-- <li><a href="contact.html">Contact</a></li> -->
         </ul>
       </div>
       <p>&copy; 2025 LIVEHA. All rights reserved.</p>
@@ -222,8 +237,6 @@
       </div>
     </div>
   </footer>
-
-
 
   <script src="assets/js/main.js"></script>
 </body>
