--- a/news.html
+++ b/news.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>News | LIVEHA</title>
+  <link rel="icon" type="image/jpeg" href="assets/images/favicon.jpeg" />
   <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -17,26 +17,25 @@
       <a href="index.html" class="navbar-brand">
         <img src="assets/images/liveha2.jpg" alt="LIVEHA Logo" class="navbar-logo" />
         <span>LIVEHA</span>
-      </a> <button class="menu-toggle" id="menuToggle">&#9776;</button> <!-- ☰ -->
+      </a> 
+      <button class="menu-toggle" id="menuToggle">&#9776;</button>
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="news.html" class="active">News</a></li>
     </ul>
   </nav>
 
-  <section class="news">
-    <h1>Latest News & Tours</h1>
-    <ul>
-      <li>🎤 LIVEHA Live in Nairobi – July 20, 2025</li>
-      <li>📰 New single "Firelight" drops August 5, 2025</li>
-      <li>🌍 Tour across East Africa planned for Q4 2025</li>
-    </ul>
+  <section class="journey">
+    <h2> News</h2>
+    <p class="hero-description">
+      No updates yet but exciting things are coming soon!<br>
+      Stay tuned and follow LIVEHA on social media to be the first to know.
+    </p>
   </section>
 
- <!-- Footer -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-links">
@@ -44,27 +43,18 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="news.html">News</a></li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <p>&copy; 2025 LIVEHA. All rights reserved.</p>
       <div class="footer-socials">
-        <a href="https://www.instagram.com/_liveha_/" target="_blank" aria-label="Instagram">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://open.spotify.com/artist/2bqydyILdFmREFoAxYQ3sO" target="_blank" aria-label="Spotify">
-          <i class="fab fa-spotify"></i>
-        </a>
-        <a href="https://www.youtube.com/channel/UCtaZ6fHaJLPUkty5ag7Fm0w" target="_blank" aria-label="YouTube">
-          <i class="fab fa-youtube"></i>
-        </a>
+        <a href="https://www.instagram.com/_liveha_/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://open.spotify.com/artist/2bqydyILdFmREFoAxYQ3sO" target="_blank"><i class="fab fa-spotify"></i></a>
+        <a href="https://www.youtube.com/channel/UCtaZ6fHaJLPUkty5ag7Fm0w" target="_blank"><i class="fab fa-youtube"></i></a>
       </div>
     </div>
   </footer>
 
-
   <script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
